Bug#15976: Multiply warnings about unfreed memory   leaks caused by Archive storage engine not closing files and   storage engines not receiving panic() during shutdown